argocd/apps/infra/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  ingressClassName: ngrok
  rules:
    - host: "monophagous-nonfrequently-russ.ngrok-free.dev"
      http:
        paths:
          - path: /cd/
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
